[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bsm_pricing"
version = "0.2.2"
description = "Python package for Black-Scholes-Merton option pricing, including inverse futures, implied volatility calculations, and volatility curve generation"
readme = "README.md"
authors = [{name = "Clive Lam", email = "clivelamkk@gmail.com"}]
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    pandas>=1.4.0,
    "scipy>=1.7.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/clivelamkk/bsm_pricing"
Repository = "https://github.com/clivelamkk/bsm_pricing.git"
Issues = "https://github.com/clivelamkk/bsm_pricing/issues"