[metadata]
name = bsm_pricing
version = 0.2.3
author = Clive Lam
author_email = clivelamkk@gmail.com
description = Python package for Black-Scholes-Merton option pricing, including inverse futures, implied volatility calculations, and volatility curve generation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/clivelamkk/bsm_pricing
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.21.0
    pandas>=1.4.0
    scipy>=1.7.0